<resources>
    <string name="app_name">ZOCO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_index">Inicio</string>
    <string name="menu_category">Categorías</string>
    <string name="menu_my_products">Mis productos</string>
    <string name="menu_notifications">Notificaciones</string>
    <string name="menu_settings">Configuraciones</string>
    <string name="menu_about_zoco">Acerca de ZOCO</string>

    <string name="title_log_in">LOG IN</string>
    <string name="title_sign_up">SIGN UP</string>


    <string name="hint_name">Nombre</string>
    <string name="hint_last_name">Apellidos</string>
    <string name="hint_email">Correo electrónico Institucional</string>
    <string name="hint_phone">Celular</string>
    <string name="hint_passwd">Contraseña</string>
    <string name="hint_repasswd">Repetir contraseña</string>

    <string name="button_log_in">Iniciar sesión</string>
    <string name="button_sign_up">Registrarse</string>

    <string name="paragraph_welcome">Bienvenido a ZOCO.</string>
    <string name="paragraph_acount">¿No tienes una cuenta?</string>
    <string name="paragraph_signUp_here"><u>Registrate aquí</u></string>
    <string name="paragraph_forgot_password"><u>Recuperar Contraseña</u></string>
</resources>