<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_log_in">

    <fragment
        android:id="@+id/nav_index"
        android:name="com.arlequins.zoco.ui.allProducts.AllProductsFragment"
        android:label="@string/menu_index"
        tools:layout="@layout/fragment_index" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.arlequins.zoco.ui.category.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_my_products"
        android:name="com.arlequins.zoco.ui.myProducts.MyproductsFragment"
        android:label="@string/menu_my_products"
        tools:layout="@layout/fragment_my_products" />
    <fragment
        android:id="@+id/nav_log_in"
        android:name="com.arlequins.zoco.ui.login.LogInFragment"
        android:label="@string/title_log_in"
        tools:layout="@layout/fragment_log_in" >
        <action
            android:id="@+id/action_logInFragment_to_nav_all_products"
            app:destination="@id/nav_index" />
        <action
            android:id="@+id/action_nav_log_in_to_signUpFragment"
            app:destination="@id/nav_sign_up" />
    </fragment>
    <fragment
        android:id="@+id/nav_sign_up"
        android:name="com.arlequins.zoco.ui.signup.SignUpFragment"
        android:label="@string/title_sign_up"
        tools:layout="@layout/fragment_sign_up" >
        <action
            android:id="@+id/action_signUpFragment_to_nav_log_in"
            app:destination="@id/nav_log_in" />
    </fragment>
    <fragment
        android:id="@+id/nav_about_zoco"
        android:name="com.arlequins.zoco.ui.aboutZoco.AboutZocoFragment"
        android:label="@string/menu_about_zoco"
        tools:layout="@layout/fragment_about_zoco" />
    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.arlequins.zoco.ui.notifications.NotificationsFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.arlequins.zoco.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>